# AI-Receptionist

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_tenants_users_roles.py  0002_rls_policies.py  0003_audit_log.py  0004_customers_conversations_messages.py  0005_seed_phase2_permissions.py  0006_phase2_rls_policies.py  0007_resort_settings.py  0008_remove_tenant_system.py  0009_single_resort_rls.py  0010_pgvector_extensions.py  0011_knowledge_sources.py  0012_knowledge_source_versions.py  0013_knowledge_chunks.py  0014_knowledge_media.py  0015_knowledge_ingestion_jobs.py  0016_knowledge_retrieval_logs_and_feedback.py  0017_knowledge_governance.py  0018_website_crawl_runs.py  0019_knowledge_rls.py  0020_conversations_flow_state.py  0021_orchestration_turns.py  0022_service_requests.py  0023_orchestration_rls.py  0024_webchat_sessions.py  0025_users_staff_fields.py  0026_notifications.py  0027_customer_feedback.py  0028_room_bookings.py  0029_payments.py  0030_voice_calls.py
apps/api/app/: config.py  database.py  deps.py  errors.py  logging.py  main.py  middleware.py  rate_limit.py
apps/api/app/analytics/: repository.py  router.py  schemas.py  service.py
apps/api/app/audit/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/auth/: jwt.py  router.py  schemas.py  service.py
apps/api/app/bookings/: constants.py  models.py  repository.py  router.py  schemas.py  service.py  sms.py
apps/api/app/common/: models.py  pagination.py  responses.py
apps/api/app/conversations/: constants.py  models.py  repository.py  router.py  schemas.py  service.py  state_machine.py
apps/api/app/customers/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/feedback/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/health/: router.py  service.py
apps/api/app/knowledge/: benchmark.py  constants.py  embeddings.py  indexing.py  malware.py  models.py  normalization.py  repository.py  router.py  schemas.py  service.py  storage.py  validation.py
apps/api/app/messages/: constants.py  models.py  repository.py  schemas.py  service.py
apps/api/app/notifications/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/orchestration/: constants.py  domain.py  memory.py  models.py  pipeline.py  providers.py  repository.py  router.py  schemas.py  service.py
apps/api/app/payments/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/tests/: conftest.py  test_analytics.py  test_auth_required.py  test_booking_requests.py  test_conversation_constants.py  test_conversations.py  test_customer_feedback.py  test_customers.py  test_database_safety.py  test_health.py  test_knowledge_benchmark.py  test_knowledge_chunking.py  test_knowledge_embeddings.py  test_knowledge_governance.py  test_knowledge_indexing.py  test_knowledge_retrieval_integration.py  test_knowledge_retrieval_logic.py  test_knowledge_security.py  test_knowledge_sources.py  test_knowledge_validation.py  test_knowledge_website_crawler.py  test_knowledge_website_service.py  test_notifications.py  test_orchestration_context_assembler.py  test_orchestration_flow_engine.py  test_orchestration_guardrails.py  test_orchestration_handoff_engine.py  test_orchestration_intent_classification.py  test_orchestration_llm_providers.py  test_orchestration_memory.py  test_orchestration_pipeline.py  test_orchestration_prompt_builder.py  test_orchestration_tool_handlers.py  test_orchestration_tool_registry.py  test_rbac.py  test_resort_settings.py  test_settings_hub.py  test_tenant_isolation.py  test_users.py  test_webchat_auth.py  (+1 more)
(+269 files in other folders)
